--- a/Eksamensprojekt APITests1/Eksamensprojekt APITests1.csproj
+++ b/Eksamensprojekt APITests1/Eksamensprojekt APITests1.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <RootNamespace>Eksamensprojekt_APITests1</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -14,7 +15,10 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
-    <PackageReference Include="Selenium.WebDriver" Version="4.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Eksamensprojekt API\Eksamensprojekt API.csproj" />
   </ItemGroup>
 
 </Project>
